# intuition

./: .coveragerc  .gitignore  .gitmodules  .landscape.yaml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README  README.md  README.rst  README.txt  Vagrantfile  bootstrap.sh  config.sh  dev-requirements.txt  install.sh  json.cpp  logs.doc.md  notes.txt  notes_tmp.txt.odt  requirements.txt  run_labo.py  run_labo.sh  setup.cfg  setup.py  shippable.yml  test.txt  tmp.csv  tmp_infos.txt  vagrant_init.sh  wercker.yml
Database/: stocks.db
app/: docker-intuition  intuition
application/: analysis.R  app.py  client_console.js  deploy_on_grid.py  server_fwd.js
backtester/: algos.cfg  analysis.R  backtest.py  global.R  history.csv  managers.cfg  returns_comparisons.R  runBacktest.sh
cli/: Interface.cpp  Interface.h  Share.cpp  Share.h  config.json  makefile  notes.txt  other_notes.txt  quantmod.R  test.sh  trade  trade.cpp
config/: algos.cfg  backtest.json  backtest.yaml  backtest.yml  conf.yaml  default.json  grid.bkp  grid.json  live.json  live.yaml  local.env  local.sh  managers.cfg  managers.json  mysql.cfg  plugins.json  plugins.tpl  strategies.json  tpl_default.json  tpl_local.sh
current/: CMakeLists.txt  Interface.cpp  Interface.h  QuanTrade  config.json  trade.cpp
current/data/: assets.db
current/modules/: Module.cpp  Module.h  Share.cpp  Share.h
current/modules/basic/: Action.cpp  Action.h  CMakeLists.txt  backup.config.json  basic.cpp  basicReport.txt  compute.R  config.json  downloader.py  finance.R  finance.py  rss.py
data/: .csv  INDEX_FCHI.csv  StockTwits-sectors-industries.csv  StockTwits-syms.csv  cac40.csv  dump_sql.csv  feeds.db  forex.csv  market.yml  nasdaq.csv  notes.markdown  nyse.csv  readme.md  readme.rst  stocks.db
database/: cmd.txt  notes.rst  stocks.db
deprecated/: QuoteRetriever.py  QuotesFetcher.py
doc/: help.R
gui/: Interface.cpp  Interface.h  Makefile  WindowMain.cpp  WindowMain.h  gui_trade  gui_trade.cpp  gui_trade.pro  quantmod.R
intuition/: __init__.py  __main__.py  analysis.py  cli.py  configuration.py  constants.py  deathstar.py  engine.py  errors.py  finance.py  test_framework.py  test_utils.py  utils.py  version.py
logs/: report-192.168.0.17-.md  report.192.168.0.12.md  report.192.168.0.14.md  report.192.168.0.17.md  report.md  report.md-192.168.0.20
management/: 20130327_1130-BdD_Flocon_v0.1.odg  20130328_1030-ETLv0.1.odg  20130328_1140-Ntiersv0.1.odg  bugs.txt  notes.txt  readme.md  readme.rst  structure.txt  uml.uxf  workflow.planner  zipline_changelog.rst  zipline_changelog.txt
network/: RClientInterface.R  clientInterface.R  cmd.txt  debugClient.js  improvements.js  runShiny.sh  server.js  shiny-server.config  workerNode.js
neuronquant/: __init__.py  deathstar.py  errors.py  gryd  strateg_library.py  version.py  zipline
new/: CMakeLists.txt  Interface.cpp  Interface.h  QuanTrade  Share.cpp  Share.h  assets.db  trade.cpp
new/modules/basic/: Action.cpp  Action.h  CMakeLists.txt  basic  basic.cpp  compute.R  config.json  downloader.py  finance.R
playground/: 2dl_test.py  a.out  api_dl.py  assets.db  bluetooth_test.js  compute.R  conf_r.json  config.json  courseraEcoHW1.py  csqlite.c  dl_dropbox.R  dl_test.py  downloader.py  dual_moving_average.py  dvmVScpam.py  finance.R  finance.py  lxml_dl.py  main.py  makefile  pandasExemple.py  pandasIO.py  pltFinance.py  portfolioOpt.py  rpy2Linear.py  run_labo.sh  save_perfs.txt  sql.py  sqlite.R  symbol_listing.csv  test.R  time_bench.py
pocoVersion/: Interface.cpp  Makefile  TradeCenter.cpp  TradeCenter.h  assets.db  config.sh  pocoTrade-x86_64.properties
pyTrade/: __init__.py
sandbox/: init.py
scripts/: bootstrap.sh  convert.sh  database_manager.py  deploy.py  docker-run.sh  fetch-nasdaq-list.sh  fillSQLite.py  generate_algo_env.py  getpublicip.py  install.sh  install_r_packages.R  minizipline.py  pyscience.Dockerfile  qt_requirements.txt  qt_requirements_extra.txt  requirements.txt  run_app.sh  run_backtest.sh  run_labo.py  run_shiny.sh  sandbox.sh  stocks_build.sql  todo_check.sh  update_library.sh  utils.sh
server/: android_notify.js  client.js  client_console.js  console_ui.js  curses_ui.js  readme.md  (+15 more)
(+626 files in other folders)
